# indexing_dialect

./: CMakeLists.txt  README.md  build-requirements.txt
.github/workflows/: buildAndTestIndexing.yml
include/indexing-c/: Dialects.h  Passes.h
include/indexing/Dialect/Indexing/IR/: Indexing.h  IndexingOps.td  IndexingTypes.td
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Dialect/Indexing/IR/: Indexing.cpp
plugin/: CMakeLists.txt  indexing-plugin.cpp
python/: CMakeLists.txt  IndexingDialect.cpp  IndexingPasses.cpp
python/mlir_indexing/dialects/: IndexingOps.td  indexing.py
python/mlir_indexing/runtime/: util.py
scripts/: get_llvm_url.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/Indexing/: basic.mlir
test/python/dialects/indexing/: dialect.py
